// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FluidImage - ThumbnailImage Renders an img with full props 1`] = `
<img
  alt="some description"
  draggable={false}
  onLoad={[Function]}
  src="testImage.jpeg"
  style={
    Object {
      "height": "auto",
      "opacity": 1,
      "position": "absolute",
      "transition": "opacity 0.6s",
      "width": "100%",
      "zIndex": 0,
    }
  }
  title="some title"
/>
`;

exports[`FluidImage - ThumbnailImage Renders an img with minimal props 1`] = `
<img
  alt={undefined}
  draggable={false}
  onLoad={[Function]}
  src="testImage.jpeg"
  style={
    Object {
      "height": "auto",
      "opacity": 0,
      "position": "absolute",
      "transition": "opacity 0.6s",
      "width": "100%",
      "zIndex": 0,
    }
  }
  title={undefined}
/>
`;
